--- a/pom.xml
+++ b/pom.xml
@@ -221,7 +221,7 @@
 		<dependencies>
 			<dependency>
 				<groupId>org.hamcrest</groupId>
-				<artifactId>hamcrest-core</artifactId>
+				<artifactId>hamcrest</artifactId>
 				<version>2.2</version>
 			</dependency>
 		</dependencies>
